--- a/templates/core/categorias.html
+++ b/templates/core/categorias.html
@@ -37,10 +37,10 @@
                                     <td class="text-success">R$ {{ categoria.total_valor|floatformat:2 }}</td>
                                     <td>
                                         <a href="#" class="btn btn-sm btn-info" data-bs-toggle="modal" data-bs-target="#modalEditarCategoria{{ categoria.id }}">
-                                            <i class="fas fa-edit"></i>
+                                            <i class="fas fa-edit">Edit</i>
                                         </a>
                                         <a href="#" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modalExcluirCategoria{{ categoria.id }}">
-                                            <i class="fas fa-trash"></i>
+                                            <i class="fas fa-trash">Excluir</i>
                                         </a>
                                     </td>
                                 </tr>
@@ -80,10 +80,10 @@
                                     <td class="text-danger">R$ {{ categoria.total_valor|floatformat:2 }}</td>
                                     <td>
                                         <a href="#" class="btn btn-sm btn-info" data-bs-toggle="modal" data-bs-target="#modalEditarCategoria{{ categoria.id }}">
-                                            <i class="fas fa-edit"></i>
+                                            <i class="fas fa-edit">Edit</i>
                                         </a>
                                         <a href="#" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modalExcluirCategoria{{ categoria.id }}">
-                                            <i class="fas fa-trash"></i>
+                                            <i class="fas fa-trash">Excluir</i>
                                         </a>
                                     </td>
                                 </tr>
