--- a/templates/base.html
+++ b/templates/base.html
@@ -205,13 +205,18 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if 'categorias' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'core:categorias_lista' %}">
-                                <i class="bi bi-tags"></i> Categorias
+                            <a class="nav-link {% if 'contas' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'core:contas_lista' %}">
+                                <i class="bi bi-wallet2"></i> Contas
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if 'contas' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'core:contas_lista' %}">
-                                <i class="bi bi-wallet2"></i> Contas
+                            <a class="nav-link {% if 'veiculos' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'veiculos:dashboard_veiculos' %}">
+                                <i class="bi bi-car-front"></i> Veículos
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if 'categorias' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'core:categorias_lista' %}">
+                                <i class="bi bi-tags"></i> Categorias
                             </a>
                         </li>
                         <li class="nav-item">
